tests/characterization/snapshots/manager_versions__outside_environment.snap
---
source: tests/characterization/manager.rs
expression: output
---
exit: 0
--- stdout ---
manager:
  v2.0.0
  v1.10.0
  v1.2.3
--- stderr ---
--- end ---
